# xiluolin

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  test-persona.sql  vite.config.ts  vitest.config.ts
.agents/: settings.json
.github/workflows/: ci.yml
docs/: README.md  demo-script.md  fix-text-output-issue.md  hotword-recommendations.md  keytap-integration-plan.md  macos-build.md  requirements-analysis.md  roadmap.md  solution-design.md  text-provider-config.md  troubleshooting-text-output.md  troubleshooting.md  usage-guide.md  快捷键录音问题修复说明.md  方案设计.md
docs/design/: ui-style.md
docs/dev/: 2026-05-24-t001-dev-workflow-infrastructure.md  2026-05-24-t002-init-tauri-react-pnpm.md  2026-05-24-t003-local-data-layer.md  2026-05-24-t004-builtin-persona-default-selection.md  2026-05-24-t004a-shadcn-tailwind-ui-foundation.md  2026-05-24-t005-hotword-dictionary.md  2026-05-24-t006-zhipu-asr-provider.md  2026-05-24-t007-openai-responses-text-polish.md  2026-05-24-t008-main-voice-flow.md  2026-05-24-t009-history-statistics.md  2026-05-24-t011-tauri-store-startup-fix.md  2026-05-25-refactoring-summary.md  2026-05-25-t010-demo-docs-sync.md  2026-05-25-t012-recording-module.md  2026-05-25-t013-global-hotkey.md  2026-05-25-t014-output-module.md  2026-05-25-t015-main-ui.md  2026-05-25-t016-history-page.md  2026-05-25-t017-persona-page.md  2026-05-25-t018-hotword-page.md  2026-05-25-t019-statistics-page.md  2026-05-25-t020-settings-page.md  2026-05-25-t021-error-handling.md  2026-05-25-t022-e2e-verification.md  2026-05-25-t023-navigation-framework.md  2026-05-25-t024-home-page-refactor.md  2026-05-25-t025-persona-page-integration.md  2026-05-25-t026-hotword-page-optimization.md  2026-05-25-t027-settings-page-refactor.md  2026-05-25-t028-ui-e2e-verification.md  2026-05-25-task-planning-adjustment.md  2026-05-25-ui-restructure-plan.md  2026-07-17-t028a-main-development-workflow.md  2026-07-17-t029-quality-security-baseline.md  2026-07-17-t030-credential-privacy-hardening.md  2026-07-17-t031-capture-session-delivery.md  2026-07-17-t032-input-readiness.md  2026-07-17-t033-capture-retention.md  2026-07-17-t034-capture-reprocessing.md  2026-07-17-t035-local-asr.md  (+7 more)
docs/retrospectives/: 2026-07-17-modernization-overview.md  README.md  capture-history-and-reprocessing.md  capture-session-and-cross-app-delivery.md  collaboration-git-and-ci-lessons.md  future-work-and-checklists.md  local-asr-and-provider-strategy.md  macos-voice-input-reliability.md  quality-and-security-baseline.md  recording-overlay-and-ui-interaction.md
public/: indicator.html
scripts/: bindings.mjs  build.mjs  dev.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  indicator.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_migration.rs  asr.rs  audio_control.rs  bindings.rs  capture_session.rs  credentials.rs  data.rs  events.rs  focus_capture.rs  history_reprocessing.rs  hotkey.rs  indicator.rs  lib.rs  local_asr.rs  local_asr_model.rs  macos_permissions.rs  main.rs  output.rs  pipeline.rs  readiness.rs  recording.rs  recording_storage.rs  text_polish.rs
src-tauri/src/data/: commands.rs  database.rs  helpers.rs  history_repository.rs  hotword_repository.rs  mod.rs  models.rs  persona_repository.rs
src-tauri/tests/: local_asr_provider.rs  local_asr_smoke.rs  local_data_config.rs  local_data_history.rs  local_data_hotword.rs  local_data_layer.rs  local_data_persona.rs  openai_text_polish_provider.rs  recording_file_security.rs  voice_input_pipeline.rs  zhipu_asr_provider.rs
src-tauri/tests/common/: mod.rs
src/app/: App.tsx  AppSidebar.tsx
src/lib/: persona-icons.ts
(+58 files in other folders)
