[package]
name = "xiluolin"
version = "0.1.0"
description = "Open-source AI voice input assistant for office work, writing, and programming."
authors = ["XiLuoLin Contributors"]
license = "MIT"
repository = "https://github.com/qinyu765/xiluolin"
edition = "2021"

[lib]
name = "xiluolin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tauri-plugin-store = "2.4.1"
tauri-plugin-global-shortcut = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.19.0", features = ["v4"] }
ureq = { version = "3.1.4", features = ["json", "multipart"] }
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }
cpal = "0.15"
hound = "3.5"
chrono = "0.4"
tokio = { version = "1", features = ["time"] }
enigo = "0.2"
arboard = "3.4"
thiserror = "2.0"
keyring = "4.1.5"
whisper-rs = "0.16.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
